# miniplayer

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindFFMPEG.cmake  FindFFmpeg.cmake
src/: CMakeLists.txt
src/miniplayer/output/audio/: AudioOutputOpenAL.cpp
